--- a/CRUDAPP/templates/enroll/updatedShow.html
+++ b/CRUDAPP/templates/enroll/updatedShow.html
@@ -1,4 +1,15 @@
-{% extends 'enroll/base.html' %}
-{% block content %}
-<h4>Update Student</h4>
+{% extends 'enroll/base.html' %} {% block content %}
+<div class="container">
+  <div class="row">
+    <div class="col-sm-8 offset-2">
+      <h4>Update Information</h4>
+      <form action="" method="post">
+      {% csrf_token %}
+      {{form}}
+      <input type="submit" value="Update" class="btn btn-success mt-2">
+      <a href=" {% url 'addShow' %}" class="btn btn-primary mt-2">Home</a>
+      </form>
+    </div>
+  </div>
+</div>
 {% endblock content %}
